// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ontario-search-box > should render a default search box element 1`] = `
<ontario-search-box class="hydrated">
  <mock:shadow-root>
    <form name="searchForm" id="ontario-search-form-container" class="ontario-search__container ontario-columns ontario-small-10 ontario-medium-offset-3 ontario-medium-6 ontario-large-offset-0 ontario-large-6" novalidate>
      <label htmlfor="ontario-search-input-field" class="ontario-label"></label>
      <div class="ontario-search__input-container">
        <input autocomplete="off" class="ontario-search__input ontario-input" id="ontario-search-input-field" name="search" type="search" value required aria-autocomplete="none">
        <input class="ontario-search__reset" id="ontario-search-reset" type="reset" value>
        <button class="ontario-search__submit" type="submit" id="ontario-search-box__submit">
          <span class="ontario-show-for-sr">
            Submit
          </span>
          <span aria-hidden="true">
            <svg class="svg-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
              <path d="M15.5 14h-.8l-.28-.27A6.47 6.47 0 0 0 16 9.5a6.5 6.5 0 1 0-13 0A6.5 6.5 0 0 0 9.5 16a6.47 6.47 0 0 0 4.23-1.57l.27.28v.8l5 5 1.5-1.5-5-5zm-6 0C7 14 5 12 5 9.5S7 5 9.5 5 14 7 14 9.5 12 14 9.5 14z"></path>
            </svg>
          </span>
        </button>
      </div>
    </form>
  </mock:shadow-root>
</ontario-search-box>
`;

exports[`ontario-search-box > should render the expected html 1`] = `
<ontario-search-box id="ontario-search-box" class="hydrated">
  <mock:shadow-root>
    <form name="searchForm" id="ontario-search-form-container" class="ontario-search__container ontario-columns ontario-small-10 ontario-medium-offset-3 ontario-medium-6 ontario-large-offset-0 ontario-large-6" novalidate>
      <label htmlfor="ontario-search-input-field" class="ontario-label"></label>
      <div class="ontario-search__input-container">
        <input autocomplete="off" class="ontario-search__input ontario-input" id="ontario-search-input-field" name="search" type="search" value required aria-autocomplete="none">
        <input class="ontario-search__reset" id="ontario-search-reset" type="reset" value>
        <button class="ontario-search__submit" type="submit" id="ontario-search-box__submit">
          <span class="ontario-show-for-sr">
            Submit
          </span>
          <span aria-hidden="true">
            <svg class="svg-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
              <path d="M15.5 14h-.8l-.28-.27A6.47 6.47 0 0 0 16 9.5a6.5 6.5 0 1 0-13 0A6.5 6.5 0 0 0 9.5 16a6.47 6.47 0 0 0 4.23-1.57l.27.28v.8l5 5 1.5-1.5-5-5zm-6 0C7 14 5 12 5 9.5S7 5 9.5 5 14 7 14 9.5 12 14 9.5 14z"></path>
            </svg>
          </span>
        </button>
      </div>
    </form>
  </mock:shadow-root>
</ontario-search-box>
`;
